--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ html, body{
   height: 100%;
 }
 body { 
-			background-image: url(cover3.jpg) ;
+			background-image: url(cover.jpg) ;
 			background-repeat:  no-repeat;
 			background-attachment: fixed;
 			background-size:  cover;
